# LetMeASC

./: .gitignore  README.md  bootstrap.sh  install.sh  pyproject.toml
letmeasc/: cli.py  firmware.py  ports.py  profile.py  serial_engine.py  wizard.py
profiles/: example_board.yaml
